changes in home page

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -187,12 +187,12 @@
 
                     <p>the effectiveness of any techniques, meal plans or programs that we deliver; or</p>
                     <p>the results that you may achieve as a result of following our programs.</p>
-                    
+
                    <p> All testimonials contain shown on our website or in our content are real people who have followed
                     the plans provided by us. For the avoidance of any doubt, however, there they are not indicative of
                     the results that you are likely to achieve, rather they are included as examples of the results that
                     particular individuals have achieved.</p>
-                
+
                     <h2>Testimonials Disclaimer</h2>
                     <p>Testimonials appearing on this website are received in various forms via a variety of submission methods. The testimonials reflect the real life experiences of individuals who used our products and/or services. However, individual results may vary. We do not claim, nor should the reader assume, that any individual experience recounted is typical or representative of what any other consumer might experience. Testimonials are not necessarily representative of what anyone else using our products and/or services may experience.</p>
 
@@ -220,8 +220,24 @@
 
                 <h2>Questions</h2>
                 <p>If you have any questions about this Disclaimer, please contact us at <a class="anchor" href="mailto:info@abhifitonline.com">info@abhifitonline.com</a>.</p>
+<p>The information contained on this website is for general information purposes only. The information is provided by Saints & Stars and while we endeavour to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.
 
+    In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with, the use of this website.
 
+    Through this website you are able to link to other websites which are not under the control of Saints & Stars. Saints & Stars has not reviewed all the sites linked to the Website, and is not responsible for the content or any off-site pages or other linked sites. Although a third-party website may contain the Saints & Stars logo, please understand that it is independent from Saints & Stars, and that Saints & Stars has no control over the content of that website and/or app.
+
+    Going to third party or off-site websites from the Website is at your own risk. These links do not imply endorsement of, sponsorship of, or affiliation with Saints & Stars.
+
+    We have no control over the nature, content and availability of those sites. Any other use of materials on the Website, including modification, distribution, or reproduction for purposes other than those noted above, without the prior written permission of Saints & Stars, is strictly prohibited.
+
+    The inclusion of any links does not necessarily imply a recommendation or endorse the views expressed within them.
+
+    Every effort is made to keep the website up and running smoothly. However, Saints & Stars takes no responsibility for, and will not be liable for, the website being temporarily unavailable due to technical issues beyond our control.
+
+    All photos made by Saints & Stars during events or in the club may be used for marketing purposes. If this is not desirable, the Member must let Saints & Stars know by writing a request to the official informational email of Saints & Stars, namely info@saints-stars.com.</p>
+<p>NO WARRANTIES
+
+    Primal 7 makes no representations and extends no warranties of any type as to the accuracy or completeness of any information or content on this web site. No express or implied warranties of any type, including for example implied warranties of merchantability or fitness for a particular purpose, are made with respect to the information, or any use of the information, on this website.</p>
             </div>
         </section>
     </main>
