changes in home page

--- a/get-started.html
+++ b/get-started.html
@@ -121,7 +121,7 @@
         </div>
         <div class="col">
           <label for="exampleFormControlTextarea1" class="form-label">Your goal</label>
-          <div id="emailHelp" class="form-text">What's your goal? (feel healthier, build lean muscle, lose weight etc).
+          <div id="you_goal_help" class="form-text">What's your goal? (feel healthier, build lean muscle, lose weight etc).
           </div>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
