--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
 
       </div>
+      <hr>
       <nav class="navbar" id="navbar">
         <div class="container-fluid">
         <div class="header-logo">
@@ -120,7 +121,7 @@
                 <!-- </div> -->
             </div>
             <div class="home-page-welcome-image">
-                <img src="/assets/images/for-404-3.jpg" alt="" class="">
+                <img src="/assets/images/pexels-wildlittlethingsphoto-1790446.jpg" alt="" class="">
                 <!-- <div class="hero-slider">
                     <div class="item">
                         <img src="assets/images/hero-img.png" alt="Hero Image">
@@ -529,91 +530,115 @@
 <!-- FAQ section -->
 
 <section class="faq-section">
-    <div class="container">
-        <h2 class="faq-heading">FAQs</h2>
-
-        <div class="faq-row">
-                <div class="single-accordion" id="accordionPanelsStayOpenLeft">
-                    <div class="single-accordion-item">
-                      <h2 class="single-accordion-header">
-                        <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                            WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE?
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse">
-                        <div class="single-accordion-body">
-                            Unlike most programs primarily focused on making you burn more calories and drop weight fast, we focus on fixing your metabolism and building muscle mass – which will help you burn more calories and drop weight not only during your subscription, but long after.Unlike most programs primarily focused on making you burn more calories and drop weight fast, we focus on fixing your metabolism and building muscle mass – which will help you burn more calories and drop weight not only during your subscription, but long after.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="single-accordion-item">
-                      <h2 class="single-accordion-header">
-                        <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                            HOW LONG IS THE PROGRAM?
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse">
-                        <div class="single-accordion-body">
-                            It’s a monthly program that you can stop / start at any time! You don’t have to wait for the first of the month to join, join whenever you’re able to and you’ll jump in with the group doing the same workouts as everyone else.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="single-accordion-item">
-                      <h2 class="single-accordion-header">
-                        <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                            HOW DO THE MEAL PLANS WORK?
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse">
-                        <div class="single-accordion-body">
-                            Meal plans will be provided for you based on your body type. Recommended macros are also provided, and you can always message our coaches in the group chat if you’d like customized macros based on your progress pictures/ current physique.
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                <div class="single-accordion" id="accordionPanelsStayOpenRight">
-                    <div class="single-accordion-item">
-                      <h2 class="single-accordion-header">
-                        <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
-                            DO I NEED SPECIAL EQUIPMENT:
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseFour" class="accordion-collapse">
-                        <div class="single-accordion-body">
-                            No — You’ll have the option of choosing in-home or gym workouts.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="single-accordion-item">
-                      <h2 class="single-accordion-header">
-                        <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                            HOW IS THE MONTHLY MVP CHOSEN?
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseFive" class="accordion-collapse">
-                        <div class="single-accordion-body">
-                            There are various criteria for choosing the winners each month. Whether it be based off of completed workouts and consistency with nutrition, group engagement / team spirit, or overall “best transformation”, you can ensure our Monthly MVP’s ALWAYS earn that title.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="single-accordion-item">
-                      <h2 class="single-accordion-header">
-                        <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
-                            WHAT DO THE WINNERS GET?
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseSix" class="accordion-collapse">
-                        <div class="single-accordion-body">
-                            The monthly MVP gets to choose a supplement of their choice, a discounted month membership, or $100 off 1:1 online coaching.
-                      </div>
-                    </div>
-                  </div>
+  <div class="container">
+    <h2 class="faq-heading">FAQs</h2>
+    <div class="faq-row">
+      <div class="single-accordion" id="accordionPanelsStayOpenLeft">
+        <div class="single-accordion-item">
+          <h4 class="single-accordion-header">
+            <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+              aria-controls="panelsStayOpen-collapseOne">
+              WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE?
+            </button>
+          </h4>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse">
+            <div class="single-accordion-body">
+              Unlike most programs primarily focused on making you burn more calories and drop weight fast, we focus on
+              fixing your metabolism and building muscle mass – which will help you burn more calories and drop weight
+              not only during your subscription, but long after.Unlike most programs primarily focused on making you
+              burn more calories and drop weight fast, we focus on fixing your metabolism and building muscle mass –
+              which will help you burn more calories and drop weight not only during your subscription, but long after.
+            </div>
+          </div>
+        </div>
+        <div class="single-accordion-item">
+          <h4 class="single-accordion-header">
+            <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseTwo">
+              HOW LONG IS THE PROGRAM?
+            </button>
+          </h4>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse">
+            <div class="single-accordion-body">
+              It’s a monthly program that you can stop / start at any time! You don’t have to wait for the first of the
+              month to join, join whenever you’re able to and you’ll jump in with the group doing the same workouts as
+              everyone else.
+            </div>
+          </div>
+        </div>
+        <div class="single-accordion-item">
+          <h4 class="single-accordion-header">
+            <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseThree">
+              HOW DO THE MEAL PLANS WORK?
+            </button>
+          </h4>
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse">
+            <div class="single-accordion-body">
+              Meal plans will be provided for you based on your body type. Recommended macros are also provided, and you
+              can always message our coaches in the group chat if you’d like customized macros based on your progress
+              pictures/ current physique.
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="single-accordion" id="accordionPanelsStayOpenRight"> -->
+        <div class="single-accordion-item">
+          <h4 class="single-accordion-header">
+            <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true"
+              aria-controls="panelsStayOpen-collapseFour">
+              DO I NEED SPECIAL EQUIPMENT:
+            </button>
+          </h4>
+          <div id="panelsStayOpen-collapseFour" class="accordion-collapse">
+            <div class="single-accordion-body">
+              No — You’ll have the option of choosing in-home or gym workouts.
+            </div>
+          </div>
+        </div>
+        <div class="single-accordion-item">
+          <h4 class="single-accordion-header">
+            <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseFive">
+              HOW IS THE MONTHLY MVP CHOSEN?
+            </button>
+          </h4>
+          <div id="panelsStayOpen-collapseFive" class="accordion-collapse">
+            <div class="single-accordion-body">
+              There are various criteria for choosing the winners each month. Whether it be based off of completed
+              workouts and consistency with nutrition, group engagement / team spirit, or overall “best transformation”,
+              you can ensure our Monthly MVP’s ALWAYS earn that title.
+            </div>
+          </div>
+        </div>
+        <div class="single-accordion-item">
+          <h4 class="single-accordion-header">
+            <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseSix">
+              WHAT DO THE WINNERS GET?
+            </button>
+            </h2>
+            <div id="panelsStayOpen-collapseSix" class="accordion-collapse">
+              <div class="single-accordion-body">
+                The monthly MVP gets to choose a supplement of their choice, a discounted month membership, or $100 off
+                1:1 online coaching.
+              </div>
+            </div>
         </div>
 
     </div>
+  </div>
+  </div>
 </section>
 <!-- FAQ section -->
 
+<!-- Get Started Section -->
 
 <section class="get-started-section">
   <div class="container">
@@ -639,7 +664,7 @@
         </div>
         <div class="">
           <label for="your_goal" class="form-label">Your goal</label>
-          <div id="you_goal_help" class="form-field-text"><small>What's your goal? (feel healthier, build lean muscle, lose weight etc).</small>
+          <div id="you_goal_help" class="you_goal_help"><small>What's your goal? (feel healthier, build lean muscle, lose weight etc).</small>
           </div>
           <textarea class="form-field" id="your_goal" rows="3"></textarea>
         </div>
@@ -651,7 +676,7 @@
   </div>
 </section>
 
-<!-- Contact Form Section -->
+<!-- Get Started Section -->
 
     </main>
     <footer class="footer">
@@ -712,14 +737,16 @@
 
                 </div>
             </div>
-            <div class="copyright-section row">
+            <div class="copyright-section">
                 <div class="copyright">
                     <p><small>
-                      © 2024 Scott Laidler All Right Reserved. </small></p><p>
-                      <a class="anchor" href="privacy-policy.html">Privacy Policy</a> | 
-                      <a class="anchor" href="terms-and-conditions.html">Terms and Conditions</a> |
-                      <a class="anchor" href="disclaimer.html">Disclaimer</a>
-                    </small></p>
+                      © 2024 Scott Laidler All Right Reserved. </small></p>
+                    </small>
+                </div>
+                <div class="terms-privacy-disclaimer"><small> <a class="anchor" href="privacy-policy.html">Privacy Policy</a> |
+                  <a class="anchor" href="terms-and-conditions.html">Terms and Conditions</a> |
+                  <a class="anchor" href="disclaimer.html">Disclaimer</a></small>
+
                 </div>
             </div>
         </div>
