--- a/plans.html
+++ b/plans.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="">
                   <label for="your_goal" class="form-label">Your goal</label>
-                  <div id="you_goal_help" class="form-field-text"><small>What's your goal? (feel healthier, build lean muscle, lose weight etc).</small>
+                  <div id="you_goal_help" class="you_goal_help"><small>What's your goal? (feel healthier, build lean muscle, lose weight etc).</small>
                   </div>
                   <textarea class="form-field" id="your_goal" rows="3"></textarea>
                 </div>
