changes in home page

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 <section class="home-page-steps-section">
   <div class="container">
     <p>Getting started with personal training is simple</p>
-    <h3>How it works</h3>
+    <h2>How it works</h2>
   <div class="home-page-steps">
     <div class="home-page-step home-page-step-one">
       <div class="home-page-step-number">
@@ -385,7 +385,9 @@
 
             <div class="keyfigure-features-box">
                 <div class="keyfigure-figures-section">
-                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></div>
+                  <div class="keyfigure-icon-section">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                  </div>
                   <div class="keyfigure-content-section">
                     <div class="keyfigure-count count plus">500</div>
                     <p>Clients</p>
@@ -393,7 +395,7 @@
                 </div>
 
                 <div class="keyfigure-figures-section">
-                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"/></svg></div>
+                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512"><path d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"/></svg></div>
                   <div class="keyfigure-content-section">
                     <div class="keyfigure-count count plus">20</div>
                     <p>Operating Years</p>
@@ -401,7 +403,7 @@
                 </div>
 
                 <div class="keyfigure-figures-section">
-                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></div>
+                  <div class="keyfigure-icon-section"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg></div>
                   <div class="keyfigure-content-section">
                     <div class="keyfigure-count count plus">100</div>
                     <p>International Clients</p>
@@ -424,7 +426,7 @@
           <h3 class="card-title home-page-plan-name basic-plan">Basic plan</h3>
           <p class="card-text">£165 per month</p>
           <ul>
-            <li> ✓ Full analysis of current lifestyle</li>
+            <li>✓ Full analysis of current lifestyle</li>
             <li>✓ Personalised training plan (adjusted weekly)</li>
             <li>✓ Professional nutrition guidance</li>
             <li>✓ Healthy & high protein recipes</li>
@@ -454,8 +456,11 @@
         <div class="card-footer"><a href="#" class="btn btn-primary">Get Started</a></div>
       </div>
     </div>
-    <h3>got any question ?</h3>
+    <div class="home-page-plan-pricing-questions">
+      <h3>Got any questions ?</h3>
     <p>Click here to read frequently asked questions or contact us https://www.sarahlouisetraining.co.uk/</p>
+    </div>
+    
   </div>
 </section>
 <!-- plan and pricing -->
@@ -463,7 +468,7 @@
 <!-- Success Stories Section -->
 <section class="success-stories-section">
     <div class="container">
-      <p>your  success is my success.</p>
+      <p>Your  success is my success.</p>
         <h2 class="success-stories-heading">Success Stories</h2>
         <div class="glide">
           <div class="glide__track" data-glide-el="track">
@@ -513,8 +518,12 @@
             </ul>
 
             <div class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" id="next" data-glide-dir="<"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg></button>
-              <button class="glide__arrow glide__arrow--right" id="prev" data-glide-dir=">"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg></button>
+              <button class="glide__arrow glide__arrow--left" id="next" data-glide-dir="<">
+                <svg class="glide_arrow-svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+              </button>
+              <button class="glide__arrow glide__arrow--right" id="prev" data-glide-dir=">">
+                <svg class="glide_arrow-svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"/></svg>
+              </button>
             </div>
             <div class="slider__bullets glide__bullets" id="glide__bullets" data-glide-el="controls[nav]">
 
@@ -539,7 +548,7 @@
             <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
               aria-controls="panelsStayOpen-collapseOne">
-              WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE?
+              WHAT MAKES MODEST MUSCLE'S MONTHLY MVMT UNIQUE?
             </button>
           </h4>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse">
@@ -585,7 +594,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="single-accordion" id="accordionPanelsStayOpenRight"> -->
+      <div class="single-accordion" id="accordionPanelsStayOpenRight">
         <div class="single-accordion-item">
           <h4 class="single-accordion-header">
             <button class="single-accordion-button collapsed" type="button" data-bs-toggle="collapse"
